--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,10 @@ dependencies {
     testCompile 'org.assertj:assertj-core:3.10.0'
     testCompile 'org.mockito:mockito-junit-jupiter:2.17.0'
     testImplementation 'com.approvaltests:approvaltests:4.0.2'
+    testImplementation 'org.jmockit:jmockit:1.49'
+    implementation fileTree(dir:'lib',include:['*.jar'])
+}
+
+test {
+    jvmArgs "-javaagent:${classpath.find { it.name.contains("jmockit") }.absolutePath}"
 }
